force-app/main/default/objects/Typeform_PUSHPULL__c/Typeform_PUSHPULL__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Typeform PUSHPULL</label>
</CustomObject>