force-app/main/default/objects/Typeform_PUSHPULL__c/fields/FromEmail_Push_Email_Blast__c.field-meta.xml
<CustomField>
    <fullName>FromEmail_Push_Email_Blast__c</fullName>
    <label>FromEmail (Push Email Blast)</label>
    <type>Email</type>
</CustomField>