force-app/main/default/objects/Typeform_PUSHPULL__c/fields/FromName_Push_Email_Blast__c.field-meta.xml
<CustomField>
    <fullName>FromName_Push_Email_Blast__c</fullName>
    <label>FromName (Push Email Blast)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>