force-app/main/default/objects/Typeform_PUSHPULL__c/fields/LastId_Typeform__c.field-meta.xml
<CustomField>
    <fullName>LastId_Typeform__c</fullName>
    <label>LastId_Typeform</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>